[gd_scene load_steps=9 format=2]

[ext_resource path="res://LightSpot.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullet.gd" type="Script" id=2]
[ext_resource path="res://Part.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.851852, 1 )
colors = PoolColorArray( 0, 0.695313, 1, 1, 0.997135, 0.960273, 0.761218, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 400.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.25
scale_random = 0.65
color_ramp = SubResource( 4 )

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.443137, 0.376471, 0.647059, 1 )
polygon = PoolVector2Array( -5.13779, -8.78669, -2.50628, -9.66387, 0.344534, -9.95626, 2.53747, -9.66387, 5.09589, -8.5674, 6.99643, -7.17854, 8.45838, -5.2049, 9.55485, -2.64648, 9.92033, 0.204327, 9.55485, 2.68965, 8.75077, 5.02878, 6.92333, 7.07551, 4.92998, 8.70781, 2.70781, 9.74945, -0.0699024, 10.0272, -2.36152, 9.74945, -4.86146, 8.77725, -7.01419, 7.18007, -8.75026, 4.9579, -9.7919, 2.38851, -10.0002, -0.0419903, -9.72246, -2.61138, -8.75026, -4.83355, -6.94474, -7.1946 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 15
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Despawn" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Despawn" to="." method="_on_Despawn_timeout"]
